--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^8.2.4",
-    "mysql2": "^3.6.3"
+    "mysql2": "^3.6.3",
+    "sequelize": "^6.35.0",
+    "sqlite3": "^5.1.6"
   }
 }
